Fix for align center

--- a/assets/sass/components/_content.scss
+++ b/assets/sass/components/_content.scss
@@ -116,3 +116,6 @@
   }
 }
 
+.aligncenter {
+  margin: 0 auto;
+}
